--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "css": "^3.0.0",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.525.0",
+    "perfect-freehand": "^1.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
